--- a/go-example-webserver/README
+++ b/go-example-webserver/README
@@ -1,24 +1,25 @@
 # Hello world!
 
 This is a snappy demo package that shows how to build and package a minimalistic webserver
-in golang for snappy.
+in golang for snappy. This package is multi-architecture enabled.
 
-Just follow these steps and you are all set to start innovating in the snappy world:
+To build for both amd64 and armhf, on an amd64 host, create the binaries in the architecture
+dependent directories. the magic-bin/go-example-webserver launch script will do the magic
+to find the right architecture and launch the right binary.
 
-    go build .
-    mkdir magic-bin/x86_64-linux-gnu
-    mv go-example-webserver magic-bin/x86_64-linux-gnu/
+To build simply do this:
 
- And similarly for armhf:
+ # change to the x86_64 directory and build the binary...
+ 1. cd magic-bin/x86_64-linux-gnu
+ 2. go build ../../
 
-    GOARCH=arm go build .
-    mkdir magic-bin/arm-linux-gnueabihf
-    mv go-example-webserver magic-bin/arm-linux-gnueabihf/
+ # switch to the armhf directory and build for ARM
+ 3. cd ../arm-linux-gnueabihf
+ 4. GOARCH=arm go build ../../
 
-And finally build the snap
-
-    snappy build .
-
+ # go to top level dir and build the snapp
+ 5. cd ..
+ 6. snappy build .
 
 This produces a snappy package for you that you can try on your snappy system.
 
